# rust-kanban

./: .env  Cargo.toml  diesel.toml
migrations/2023-11-25-090226_create_cards/: down.sql
src/: main.rs  models.rs
