[package]
name = "rust-kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = {version = "0.4.31", features = ["serde"]}
log = "0.4.20"
fern = "0.6.2"
serde = { version = "1.0.130", features = ["derive"] }